<resources>
    <string name="app_name">KIds Learning Apps</string>
    <string name="exit">ARE YOU SURE YOU WANT TO EXIT</string>
    <string name="paint">Paint</string>
    <string name="birds">Birds</string>
    <string name="number">Numbers</string>
    <string name="capitalLetter">Capital Letters</string>
    <string name="animals">Animals</string>
    <string name="fruits">Fruits</string>
    <string name="flowers">Flowers</string>
    <string name="vehicle">Vehicle</string>

</resources>
